Upgrade Server Modules to Java 11
Make Java 11 the baseline for the server modules going forward